<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/ordersFragment">
    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.misbah.quickcart.ui.orders.OrderListFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders">
        <action
            android:id="@+id/action_ordersFragment_to_addEditTaskFragment"
            app:destination="@id/addEditTaskFragment" />
    </fragment>
    <fragment
        android:id="@+id/addEditTaskFragment"
        android:name="com.misbah.quickcart.ui.orders.CartDetailsFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_cart_details">
        <argument
            android:name="order"
            android:defaultValue="@null"
            app:argType="com.misbah.quickcart.core.data.model.Order"
            app:nullable="true" />
        <argument
            android:name="title"
            app:argType="string" />
    </fragment>
    <dialog
        android:id="@+id/deleteAllCompletedDialogFragment"
        android:name="com.misbah.quickcart.ui.dialogs.ConfirmationDialogFragment"
        android:label="@string/delete_confirmation" />
    <dialog
        android:id="@+id/dateTimePickerDialogFragment"
        android:name="com.misbah.quickcart.ui.dialogs.TimePickerFragment"
        android:label="@string/date_time_picker" />
    <dialog
        android:id="@+id/quitAppDialogFragment"
        android:name="com.misbah.quickcart.ui.dialogs.QuitDialogFragment"
        android:label="@string/quit" />
    <dialog
        android:id="@+id/addCategoryDialogFragment"
        android:name="com.misbah.quickcart.ui.category.AddCategoryDialogFragment"
        android:label="@string/add_category" />
    <dialog
        android:id="@+id/addProductDialogFragment"
        android:name="com.misbah.quickcart.ui.products.AddProductDialogFragment"
        android:label="@string/add_new_product" />
    <action
        android:id="@+id/action_global_deleteAllCompletedDialogFragment"
        app:destination="@id/deleteAllCompletedDialogFragment" />

    <action
        android:id="@+id/action_global_quitAppDialogFragment"
        app:destination="@id/quitAppDialogFragment" />
    <action
        android:id="@+id/action_addTask_to_DateTimePickerFragment"
        app:destination="@id/dateTimePickerDialogFragment" />
    <action
        android:id="@+id/action_ordersFragment_to_addEditTaskFragment"
        app:destination="@id/addEditTaskFragment" />
    <action
        android:id="@+id/action_addCategoryDialogFragment"
        app:destination="@id/addCategoryDialogFragment" />
    <action
        android:id="@+id/action_addProductDialogFragment"
        app:destination="@id/addProductDialogFragment" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.misbah.quickcart.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_product"
        android:name="com.misbah.quickcart.ui.products.ProductListFragment"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_products"/>
    <fragment
        android:id="@+id/nav_category"
        android:name="com.misbah.quickcart.ui.category.CategoryFragment"
        android:label="@string/menu_tasks_category"
        tools:layout="@layout/fragment_category"/>
</navigation>