<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:chipcloud="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="farg"
            type="com.misbah.quickcart.ui.orders.CartDetailsFragment" />
        <variable
            name="cartViewModel"
            type="com.misbah.quickcart.ui.main.CartViewModel" />

    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            tools:context=".ui.profile.LoginDialogFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/bg_edit_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="1dp"
                    android:orientation="vertical"
                    android:background="@drawable/bg_quit_app_header"
                    android:paddingTop="24dp">

                    <ImageView
                        android:id="@+id/img_header"
                        android:layout_width="wrap_content"
                        android:layout_marginBottom="-4dp"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_cart_details" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:background="@color/primary"
                    android:layout_height="1dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:id="@+id/text_heading"
                        android:layout_gravity="center"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/lato"
                        android:text="@string/cart_details"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/layout_cart_item"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <View
                        android:layout_width="match_parent"
                        android:background="#F1675D"
                        android:layout_marginTop="16dp"
                        android:layout_height="1dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_margin="16dp"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:layout_height="wrap_content">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:id="@+id/text_product_name"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:ellipsize="end"
                                    android:layout_weight="1"
                                    android:gravity="center_vertical"
                                    android:maxLines="1"
                                    android:textSize="16sp"
                                    android:fontFamily="@font/lato"
                                    android:text="@string/sub_total"
                                    android:textColor="@color/text_color_red" />
                                <TextView
                                    android:id="@+id/text_sub_total"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:ellipsize="end"
                                    android:text="@{cartViewModel.shoppingCart.getSubTotalPriceFormatted}"
                                    android:gravity="center_vertical"
                                    android:maxLines="1"
                                    android:textSize="16sp"
                                    android:fontFamily="@font/lato"
                                    android:textColor="@color/text_color_red"
                                    tools:text="AED 230" />
                            </LinearLayout>
                            <LinearLayout
                                android:id="@+id/layout_tax"
                                android:layout_width="match_parent"
                                android:layout_marginTop="8dp"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:ellipsize="end"
                                    android:layout_weight="1"
                                    android:gravity="center_vertical"
                                    android:maxLines="1"
                                    android:textSize="14sp"
                                    android:fontFamily="@font/lato"
                                    android:text="@string/total_tax"
                                    android:textColor="@color/text_color_low" />
                                <TextView
                                    android:id="@+id/text_tax_price"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:ellipsize="end"
                                    android:gravity="center_vertical"
                                    android:maxLines="1"
                                    android:text="@{cartViewModel.shoppingCart.getTaxPriceFormatted}"
                                    android:textSize="14sp"
                                    android:fontFamily="@font/lato"
                                    android:textColor="@color/text_color_low"
                                    tools:text="AED 230" />
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_marginTop="12dp"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:ellipsize="end"
                                    android:layout_weight="1"
                                    android:gravity="center_vertical"
                                    android:maxLines="1"
                                    android:textStyle="bold"
                                    android:textSize="16sp"
                                    android:fontFamily="@font/lato"
                                    android:text="@string/total_amount"
                                    android:textColor="@color/text_color_red" />
                                <TextView
                                    android:id="@+id/text_total_price"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:ellipsize="end"
                                    android:gravity="center_vertical"
                                    android:maxLines="1"
                                    android:textSize="16sp"
                                    android:text="@{cartViewModel.shoppingCart.getTotalPriceFormatted}"
                                    android:textStyle="bold"
                                    android:fontFamily="@font/lato"
                                    android:textColor="@color/text_color_red"
                                    tools:text="AED 230" />
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="30dp"
                                android:id="@+id/layout_place_order"
                                android:gravity="center_vertical|center"
                                android:orientation="horizontal">
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:background="@drawable/bg_category"
                                    android:onClick="@{()->farg.clickOnSave()}"
                                    android:padding="8dp">
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:paddingStart="16dp"
                                        android:paddingEnd="16dp"
                                        android:id="@+id/btn_save_update"
                                        android:paddingBottom="4dp"
                                        android:paddingTop="4dp"
                                        android:fontFamily="@font/lato"
                                        android:text="@string/place_order"
                                        android:textColor="@color/text_color_red"
                                        android:textSize="14sp"
                                        android:textStyle="bold" />
                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:src="@drawable/ic_send" />
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:indeterminateTintMode="src_in"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:indeterminateDrawable="@drawable/bg_progress_rotate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>